// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Illustration /> Scene illustrations <BrandMomentError /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/brand-moments-error.png"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <BrandMomentLogin /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/brand-moments-login.png"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <BrandMomentNewAccountOnboarding /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/brand-moments-new-account-onboarding.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <BrandMomentPositiveOutro /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/brand-moments-positive-outro.png"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <BrandMomentStarterKit /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/brand-moments-starter-kit.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <BrandMomentUploadEmployeeData /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/brand-moments-upload-employee-data.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <Collaboration /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/miscellaneous-collaboration.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <Communication /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/miscellaneous-communications.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <CompanyValues /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/miscellaneous-company-values.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <ConnectTheDots /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/miscellaneous-connect-the-dots.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <CultureLab /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/miscellaneous-culture-lab.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <EmptyStatesAction /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/empty-states-action.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <EmptyStatesInformative /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/empty-states-informative.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <EmptyStatesNegative /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/empty-states-negative.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <EmptyStatesNeutral /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/empty-states-neutral.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <EmptyStatesPositive /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/empty-states-positive.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <EngagementSurveySummaryFemale /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/engagement-survey-summary-female.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <EngagementSurveySummaryMale /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/engagement-survey-summary-male.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <Information360Upgrade /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/information-modals-360-upgrade.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <InformationDemographicFocus /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/information-modals-demographic-focus.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <InformationEmergingTrends /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/information-modals-emerging-trends.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <InformationEmployeeLifecycle /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/information-modals-employee-lifecycle.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <InformationReportOwner /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/information-modals-report-owner.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <InformationReportOwnerByRule /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/information-modals-report-owner-by-rule.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <InformationTurnoverCalculator /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/information-modals-turnover-calculator.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <InformationTurnoverForecast /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/information-modals-turnover-forecast.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <PerformanceCompanySettings /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/performance-company-settings.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <Programs /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/engagement-programs.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <SkillsCoach1On1Meetings /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-1-on-1-meetings.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <SkillsCoachCoaching /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-coaching.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <SkillsCoachEmployeeDevelopment /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-employee-development.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <SkillsCoachEssentialFeedback /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-essential-feedback.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <SkillsCoachEssentialProductivity /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-essential-productivity.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <SkillsCoachEssentialResilience /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-essential-resilience.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <SkillsCoachFeedback /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-feedback.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <SkillsCoachInfluentialCommunication /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-influential-communication.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <SkillsCoachLeadingChange /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-leading-change.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <SkillsCoachManagerHub /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-manager-hub.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <SkillsCoachProductivity /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-productivity.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <SkillsCoachRemoteManager /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-remote-manager.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <SkillsCoachResilience /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-resilience.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <SkillsCoachStrategy /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-strategy.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <SurveyGetStarted /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/getting-started.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <SurveyOverviewClosed /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/survey-overview-closed.svg"
  />
</div>
`;

exports[`<Illustration /> Scene illustrations <TermsAgreement /> exists and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/miscellaneous-terms-agreement.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <AccountBasics /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/new-account-account-basics.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Action /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-action.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <ActionPlans /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-action-plans.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <AddImage /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-add-image.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <AddUser /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/new-account-add-user.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Alarm /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-alarm.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <AmplifyOthers /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/values-amplify-others.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Assertive /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/moods-assertive.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <BCorp /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-b-corp.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <BaselineSurvey /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-baseline-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Behaviour /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-behavior.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <BenefitsSurvey /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-benefits-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <BlankSurvey /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-blank-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <CalendarSync /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-calendar-sync.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <CandidateSurvey /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-candidate-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Cautionary /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/moods-cautionary.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <ChangeAgents /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-change-agents.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <ChangeReadiness /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-change-readiness.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <ChangeSuccess /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-change-success.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Coaching /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-coaching.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Communications /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-communications.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Community /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-community.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Company /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-company.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <CompanyDetails /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/new-account-company-details.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Conversations /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-conversations.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <CustomOnboardSurvey /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-custom-onboard-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <CustomSurvey /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-custom-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <CustomUnattributedSurvey /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-custom-unattributed-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <DataVisualization /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-data-visualization.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <EmergencyResponse /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-emergency-response.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <EmployeeData /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/new-account-employee-data.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <EndOfProbation /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-end-of-probation.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <EngagementSurvey /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-engagement-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <EssentialProductivity /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-essential-productivity.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <EssentialResilience /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-essential-resillience.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <ExecutiveReportSharing /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-executive-report-sharing.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <ExitSurvey /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-exit-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <FastAction /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-fast-action.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Feedback /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-feedback.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Fire /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-fire.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Fireworks /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-fireworks.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <FullImport /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-full-import.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Gdpr /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/new-account-gdpr.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <GeneralOnboardSurvey /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-general-onboard-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Goals /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-goals.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <HaveTheCourageToBeVulnerable /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/values-have-the-courage-to-be-vulnerable.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <HealthAndSafety /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-health-and-safety.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <HrisImport /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-hris-import.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <InclusionSurvey /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-inclusion-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Individual180 /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-individual-180.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Individual360 /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-individual-360.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <InfluentialCommunication /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-influential-communication.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Informative /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/moods-informative.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Insights /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-insights.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <InternSurvey /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-intern-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <LeaderReportSharing /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-leader-report-sharing.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Leadership180 /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-leadership-180.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Leadership360 /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-leadership-360.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <LeadingChange /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-leading-change.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <LeadingThroughCrisis /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-leading-through-crisis.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Learn /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-learn.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <LearnFasterThroughFeedback /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/values-learn-faster-through-feedback.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <London /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/offices-london.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Manager180 /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-manager-180.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Manager360 /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-manager-360.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <ManagerLearning /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-manager-learning.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <ManagerReportSharing /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-manager-report-sharing.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <MeetingVoices /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-meeting-voices.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Melbourne /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/offices-melbourne.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Microphone /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-microphone.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Negative /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/moods-negative.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <NewWaysOfWorking /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-new-ways-of-working.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <NewYork /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/offices-new-york.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Objective /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-objective.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <OneOnOne /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-1-on-1.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <PaperPen /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-paper-pen.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <PartialImport /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-partial-import.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <PerformanceDiagnostics /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-performance-diagnostics.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <PhasedWeek1OnboardSurvey /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-phased-week-1-onboard-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <PhasedWeek5OnboardSurvey /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-phased-week-5-onboard-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Positive /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/moods-positive.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <PositiveFemale /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/moods-positive.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <PositiveMale /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/moods-positive.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <PowerfulInsights /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-powerful-insights.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Privacy /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-privacy.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Process /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-process.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Productivity /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-productivity.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <PulseSurvey /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-pulse-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <QuickEngagementSurvey /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-quick-engagement-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <ReOnboarding /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-re-onboarding.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <ReadArticle /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-read-article.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Recommendation /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-recommendation.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <RemoteManager /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-remote-manager.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <RemoteOnboardSurvey /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-remote-onboard-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <RemoteWorkQSet /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-remote-work-q-set.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <ReportSharing /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-report-sharing.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Resilience /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-resilience.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Resources /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-resources.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Response /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-response.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <ReturnToWorkplace /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-return-to-workplace.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <SanFrancisco /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/offices-san-francisco.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <ScienceBackedTools /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-science-backed-tools.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <ShareReport /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-share-report.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <SinglePointOnboardSurvey /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-single-point-onboard-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <SkillsDevelopment /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-skills-development.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <SpreadsheetTemplate /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-spreadsheet-template.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Starburst /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-starburst.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Stop /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-stop.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Strategy /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-strategy.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <TakeAim /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-take-aim.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Team1 /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-team-1.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Team2 /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-team-2.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <TeamEffectiveness1 /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-team-effectiveness-1.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <TeamEffectiveness2 /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-team-effectiveness-2.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Templates /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-templates.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Timezone /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/new-account-timezone.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <TrafficCone /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-traffic-cone.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Training1 /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-training-1.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Training2 /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-training-2.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Training3 /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-training-3.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Trophy /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-trophy.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <TrustOthersToMakeDecisions /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/values-trust-others-to-make-decisions.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <UnderConstruction /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-under-construction.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <ValueAdd /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-value-add.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <ValuesSurvey1 /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-values-survey-1.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <ValuesSurvey2 /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-values-survey-2.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Video /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-video.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <ViewReports /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-view-reports.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <WellbeingSurvey /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-wellbeing-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <WellbeingSurvey1 /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-wellbeing-survey-1.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <WellbeingSurvey2 /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-wellbeing-survey-2.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <WellbeingSurvey3 /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-wellbeing-survey-3.svg"
  />
</div>
`;

exports[`<Illustration /> Spot illustrations <Workshop /> exists and renders an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-workshop.svg"
  />
</div>
`;
